...
    },
    "settings.language.ja": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "日本語"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "日本語"
...
            "value": "Hệ thống"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "システムに従う"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "跟随系统"
...
    },
    "settings.title": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cài đặt"
          }
        },
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "設定"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "设置"
...
